--- a/F21COMP1011GCTest1Student/src/main/resources/com/example/f21comp1011gctest1student/netflix-table-view.fxml
+++ b/F21COMP1011GCTest1Student/src/main/resources/com/example/f21comp1011gctest1student/netflix-table-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.f21comp1011gctest1student.NetflixTableController">
+<AnchorPane prefHeight="800.0" prefWidth="1000.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.f21comp1011gctest1student.NetflixTableController">
     <children>
         <BorderPane prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <center>
@@ -29,7 +29,7 @@
                 </TableView>
             </center>
             <top>
-                <Label text="NetFlix" BorderPane.alignment="CENTER" />
+                <Label id="header" stylesheets="@styles.css" text="NetFlix" BorderPane.alignment="CENTER" />
             </top>
             <bottom>
                 <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
